fixed bug with search and imrpoved css on mobile

--- a/www/www/assets/css/style.css
+++ b/www/www/assets/css/style.css
@@ -164,6 +164,7 @@ nav ul li a:hover {
 }
 
 .filter-options {
+    position: absolute;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -935,11 +936,12 @@ footer a:hover {
     }
 
     .filter-group {
-        min-width: 150px;
+        width: 100%;
     }
 
     .filter-options {
         gap: 8px;
+        position: relative;
     }
 
     .option-label {
